refactor: add /api/v1 prefix to openapi specs
